Printable for Recibo documentacion ready to apply CSS

--- a/frontend/web/css/printStyle.css
+++ b/frontend/web/css/printStyle.css
@@ -28,3 +28,14 @@ body{
   flex-direction: column;
   flex-wrap: nowrap;
 }
+
+.recibo-doc > .recibo-doc__title{
+
+}
+
+.recibo-doc > .entregables{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
